# cute-notes

./: .gitignore  build_installer.py  config.py  create-icons.py  create_icon.py  main.py  package.json  requirements.txt  server.py  setup.py  start-dev.ps1
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: email_config.json  html_report.py  run_tests.py  send_email.py  test_config_manager.py  test_main_window.py
tests/reports/: test_report_20260420_161716.html  test_report_20260420_163336.html  test_report_20260420_210611.html  test_report_20260420_212759.html  test_report_20260423_135757.html  test_report_20260423_135933.html  test_report_20260423_140002.html  test_report_20260423_155034.html
